Refactored to read nicer, sample.js not working
Refactered the code to read easier but now sample.js is not working. I
don't know if it needs to be referenced somewhere else. The message in
sample.js on line 8 is being hit but the request and the rest of the
function is not.

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
 "content_scripts": [
       {
           "matches": ["http://*/*","https://*/*"],
-          "js": ["sample.js"],
+          "css": ["options.css"],
+          "js": ["sample.js","options.js"],
           "all_frames": false
       }
                         
