Removed sample.js, extension now working
Removed sample.js as well as content scripts from the manifest as they
aren't needed for the functionality of this script.

--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,6 @@
         
                              
 ], 
-"options_page": "options.html",	
-"content_scripts": [
-      {
-          "matches": ["http://*/*","https://*/*"],
-          "css": ["options.css"],
-          "js": ["sample.js","options.js"],
-          "all_frames": false
-      }
-                        
-]
+"options_page": "options.html"	
+
 }
